# compliance-reporter

./: .gitignore  README.md  package-lock.json
backend/: .env  .env.example  pyproject.toml  requirements.txt  run_dev.sh
backend/src/api/: app.py
backend/src/api/routes/: admin_frameworks.py  admin_prompts.py  findings.py  health.py  index.py  ingest.py  reports.py  sections.py
backend/src/assessors/: __init__.py  base.py  registry.py
backend/src/assessors/occ/: assessor.py  taxonomy.yaml
backend/src/assessors/osfi_b10/: assessor.py  taxonomy.yaml
backend/src/assessors/osfi_b13/: assessor.py  taxonomy.yaml
backend/src/assessors/seal/: assessor.py  taxonomy.yaml
backend/src/compliance_reporter_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
backend/src/data/indexes/05c7d200-002c-44f8-a1bd-94a4bc840203/: index_metadata.pickle
backend/src/data/runs/: seal-ABC-1758556394.json  seal-ABC-1758740496.json  seal-ABC-1758815326.json  seal-ABC-1758916622.json
backend/src/engine/: indexer.py  ingest_guidelines.py  orchestrator.py  paths.py  prompt_store.py  retrieval.py  sections_store.py
backend/src/engine/renderers/: pdf_report.py  sections.py
backend/src/guidelines/: frameworks.yaml
backend/src/guidelines/occ/: prompts.yaml
backend/src/guidelines/osfi_b10/: prompts.yaml
backend/src/guidelines/osfi_b13/: prompts.yaml
backend/src/guidelines/seal/: prompts.yaml
backend/src/models/: sections.py
backend/src/services/: ai_client.py  llm_router.py  openai_client.py  section_store.py  vector_langchain.py
frontend/: index.html  (+2 more)
(+16 files in other folders)
